[package]
name = "msoauth"
description = "A simple Microsoft OAuth2 client"
version = "1.1.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
shellexpand = "3.1.1"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
